K8S/deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployv2 #项目部署名称
  labels:
     app: deployv2 #项目部署名称
spec:
 ports:
  - name: http
    port: 80
 selector:
  app: deployv2 #项目部署名称
